--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "backend_non",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon ./src/app.js"
+    "start": "nodemon app.js",
+    "server": "nodemon app --ignore client",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm start\" \"npm run server\""
   },
   "repository": {
     "type": "git",
@@ -16,13 +19,17 @@
   "bugs": {
     "url": "https://github.com/NON-OUTLIERS/Backend/issues"
   },
-  "homepage": "https://github.com/NON-OUTLIERS/Backend#readme",
+  "homepage": ".",
   "dependencies": {
+    "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.0",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
+    "react-router-dom": "^6.3.0",
+    "router": "^1.3.7",
     "validator": "^13.7.0"
   },
   "devDependencies": {
