--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "url": "https://github.com/NON-OUTLIERS/Backend/issues"
   },
   "homepage": ".",
+  "nodemonConfig": {
+    "ignore": ["test.json"]
+  },
   "dependencies": {
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
@@ -29,6 +32,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.6.0",
     "mongoose": "^6.3.3",
+    "multer": "^1.4.4",
+    "pdf-parse": "^1.1.1",
     "react-router-dom": "^6.3.0",
     "router": "^1.3.7",
     "validator": "^13.7.0"
